--- a/package.json
+++ b/package.json
@@ -1,45 +1,15 @@
 {
-  "name": "vite-react-typescript-starter",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "ragga-vercel-app",
+  "version": "1.0.0",
+  "description": "Ragga App deployed on Vercel with Gemini AI Function",
+  "main": "api/gemini.js",
   "scripts": {
-    "dev": "concurrently \"npm run start:frontend\" \"npm run start:backend\"",
-    "start:frontend": "vite",
-    "start:backend": "node server.js",
-    "build": "vite build",
-    "lint": "eslint .",
-    "lint:dualite": "eslint --config eslint.dualite.config.js .",
-    "tsc:dualite": "yarn tsc -p tsconfig.dualite.json",
-    "preview": "vite preview"
+    "start": "vercel dev"
   },
   "dependencies": {
-    "lucide-react": "^0.511.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "axios": "^1.9.0",
-    "express": "^4.19.2",
-    "openai": "^4.47.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.27.0",
-    "@types/react": "^19.1.5",
-    "@types/react-dom": "^19.1.5",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.1",
-    "globals": "^16.2.0",
-    "@vitejs/plugin-react": "^4.5.0",
-    "eslint": "^9.27.0",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "vite": "^6.3.5",
-    "concurrently": "^8.2.2"
+    "@google/genai": "^0.15.0",
+    "express": "^4.19.2"
   }
+  // قد تحتاج إلى إضافة "type": "module" إذا كنت تواجه مشاكل في الاستيراد (Import)
+  // "type": "module"
 }
