--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ragga-vercel-app",
   "version": "1.0.1",
-  "description": "Ragga App deployed on Vercel with Gemini AI Function for content generation. Dependencies updated to address npm warnings.",
+  "description": "Ragga App deployed on Vercel with Gemini AI and Supabase integration for data persistence and content generation.",
   "main": "api/gemini.js",
   "type": "module",
   "scripts": {
@@ -9,7 +9,12 @@
     "deploy": "vercel --prod"
   },
   "dependencies": {
+    // مكتبة Gemini AI (تم الاحتفاظ بها لإنشاء المحتوى)
     "@google/genai": "^0.15.0",
+    
+    // مكتبة Supabase للاتصال بقاعدة البيانات (مضافة حديثاً)
+    "@supabase/supabase-js": "^2.39.3", 
+    
     "lru-cache": "^10.0.0"
   },
   "devDependencies": {
