--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lru-cache": "^10.0.0"
   },
   "devDependencies": {
-    "vercel": "^35.0.0"
+    "vercel": "^35.0.0",
+    "vite": "^5.0.0" // <--- تم إضافة Vite هنا
   }
 }
