--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
   },
   "devDependencies": {
     "vercel": "^35.0.0",
-    "vite": "^5.0.0" // <--- تم إضافة Vite هنا
+    "vite": "^5.0.0" 
   }
 }
