--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "vercel": "^35.0.0",
-    "vite": "^5.0.0" 
+    "vite": "^5.0.0",
+    "@vitejs/plugin-react": "^4.2.1"  
   }
 }
