--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "vercel": "^35.0.0",
     "vite": "^5.0.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "tailwindcss": "^3.4.4",      // <--- تم إضافته
-    "postcss": "^8.4.38",         // <--- تم إضافته
-    "autoprefixer": "^10.4.19"    // <--- تم إضافته
+    "tailwindcss": "^3.4.4",
+    "postcss": "^8.4.38",
+    "autoprefixer": "^10.4.19"
   }
 }
