--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@google/genai": "^0.15.0",
     "@supabase/supabase-js": "^2.39.3",
-    "lru-cache": "^10.0.0"
+    "lru-cache": "^10.0.0",
+    "@vercel/postgres": "^0.9.0"  // <--- 🆕 تمت إضافة هذه المكتبة لربط Neon
   },
   "devDependencies": {
     "vercel": "^35.0.0",
