--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "@google/genai": "^0.15.0",
     "@supabase/supabase-js": "^2.39.3",
-    "lru-cache": "^10.0.0",
-    "@vercel/postgres": "^0.9.0"  // <--- 🆕 تمت إضافة هذه المكتبة لربط Neon
+    "lru-cache": "^10.0.0",  <-- ❗️ يجب أن تكون هذه الفاصلة موجودة
+    "@vercel/postgres": "^0.9.0"  <-- 🆕 السطر الجديد
   },
   "devDependencies": {
     "vercel": "^35.0.0",
