--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "@google/genai": "^0.15.0",
     "@supabase/supabase-js": "^2.39.3",
-    "lru-cache": "^10.0.0",
-    "@vercel/postgres": "^0.9.0"  <-- ✅ تمت إضافة الفاصلة بعد السطر السابق واستخدام الاقتباس المزدوج
+    "lru-cache": "^10.0.0",  <-- ❗ يجب التأكد من وجود هذه الفاصلة هنا
+    "@vercel/postgres": "^0.9.0"  <-- 🆕 السطر الجديد
   },
   "devDependencies": {
     "vercel": "^35.0.0",
