--- a/package.json
+++ b/package.json
@@ -1,26 +1,22 @@
 {
-  "name": "ragga-vercel-app",
+  "name": "raqqa-vercel-app",
   "version": "1.0.1",
-  "description": "Ragga App deployed on Vercel with Gemini AI and Supabase integration for data persistence and content generation.",
-  "main": "api/gemini.js",
+  "description": "Raqqa App deployed on Vercel with Mixedbread AI and Neon integration.",
+  "main": "api/raqqa-ai.js",
   "type": "module",
   "scripts": {
     "start": "vercel dev",
-    "deploy": "vercel --prod",
-    "build": "vite build"
+    "deploy": "vercel --prod"
   },
   "dependencies": {
+    "@mixedbread-ai/sdk": "^1.0.0",
     "@google/genai": "^0.15.0",
     "@supabase/supabase-js": "^2.39.3",
-    "lru-cache": "^10.0.0",
-    "@vercel/postgres": "^0.9.0"
+    "@vercel/postgres": "^0.9.0",
+    "node-fetch": "^3.3.0",
+    "lru-cache": "^10.0.0"
   },
   "devDependencies": {
-    "vercel": "^35.0.0",
-    "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "tailwindcss": "^3.4.4",
-    "postcss": "^8.4.38",
-    "autoprefixer": "^10.4.19"
+    "vercel": "^35.0.0"
   }
 }
