--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
   "name": "raqqa-vercel-app",
   "version": "1.0.1",
-  "description": "Raqqa App on Vercel",
-  "main": "api/raqqa-ai.js",
   "type": "module",
   "scripts": {
-    "build": "echo 'No build step needed'",
-    "install": "npm install"
+    "build": "mkdir -p dist && cp index.html dist/ 2>/dev/null || true",
+    "start": "vercel dev"
   },
   "dependencies": {
-    "@mixedbread-ai/sdk": "^1.0.0",
+    "@mixedbread-ai/sdk": "^1.2.0",
     "@google/genai": "^0.15.0",
     "@supabase/supabase-js": "^2.39.3",
     "@vercel/postgres": "^0.9.0",
-    "node-fetch": "^3.3.0",
-    "lru-cache": "^10.0.0"
+    "node-fetch": "^3.3.0"
   },
   "devDependencies": {
-    "vercel": "^35.0.0"
+    "vercel": "^39.0.0"
   }
 }
