--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "raqqa-app-vite",
+  "name": "raqqa-app",
   "private": true,
-  "version": "1.0.2",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
