--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "raqqa-app",
+  "name": "raqqa-app-neon-ai",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -13,7 +13,8 @@
     "@google/genai": "^0.15.0",
     "@supabase/supabase-js": "^2.39.3",
     "@vercel/postgres": "^0.9.0",
-    "node-fetch": "^3.3.0"
+    "node-fetch": "^3.3.0",
+    "pg": "^8.11.0"
   },
   "devDependencies": {
     "vite": "^5.0.0",
