--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "raqqa-app-official",
+  "name": "raqqa-app-pro",
   "private": true,
-  "version": "1.1.0",
+  "version": "1.2.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -17,6 +17,7 @@
     "pg": "^8.11.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
     "vite": "^5.0.0",
     "vercel": "^39.0.0"
   }
