--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@google/genai": "^0.15.0",
     "@supabase/supabase-js": "^2.39.3",
     "@vercel/postgres": "^0.9.0",
+    "@vercel/blob": "^0.15.0",
     "node-fetch": "^3.3.0",
     "pg": "^8.11.0"
   },
@@ -24,4 +25,4 @@
     "vite": "^5.0.0",
     "vercel": "^39.0.0"
   }
-}
+  }
