--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "تطبيق رقة للعناية",
   "short_name": "رقة",
-  "description": "مساحتكِ الآمنة للعناية بمشاعركِ وصحتكِ"،
+  "description": "مساحتكِ الآمنة للعناية بمشاعركِ وصحتكِ",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
@@ -11,13 +11,19 @@
     {
       "src": "https://r.jina.ai/i/0586f77918394982987be7b11c977d29",
       "sizes": "512x512",
-      "type": "image/jpeg",
-      "purpose": "any maskable"
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "https://r.jina.ai/i/0586f77918394982987be7b11c977d29",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     },
     {
       "src": "https://r.jina.ai/i/0586f77918394982987be7b11c977d29",
       "sizes": "192x192",
-      "type": "image/jpeg"
+      "type": "image/png"
     }
   ]
-}
+    }
