--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "تطبيق رقة للعناية",
   "short_name": "رقة",
-  "description": "مساحتكِ الآمنة للعناية بمشاعركِ وصحتكِ وجمالكِ يومياً",
+  "description": "مساحتكِ الآمنة للعناية بمشاعركِ وصحتكِ وجمالكِ يومياً"،
   "lang": "ar-SA",
   "start_url": "/",
   "display": "standalone",
