--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
   "name": "تطبيق رقة للعناية",
   "short_name": "رقة",
-  "description": "مساحتكِ الآمنة للعناية بمشاعركِ وصحتكِ وجمالكِ يومياً"،
+  "description": "مساحتكِ الآمنة للعناية بمشاعركِ وصحتكِ وجمالكِ يومياً",
   "lang": "ar-SA",
+  "dir": "rtl",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#e91e63",
-  "orientation": "portrait",
   "icons": [
     {
       "src": "https://r.jina.ai/i/0586f77918394982987be7b11c977d29",
