--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "formidable": "^3.5.1",
+    "@neondatabase/serverless": "^0.10.4",
+    "@vercel/blob": "^0.27.0",
     "@mixedbread-ai/sdk": "^1.0.0",
     "@google/genai": "^0.15.0",
     "@supabase/supabase-js": "^2.39.3",
     "@vercel/postgres": "^0.9.0",
-    "@vercel/blob": "^0.15.0",
     "node-fetch": "^3.3.0",
     "pg": "^8.11.0"
   },
@@ -25,4 +27,4 @@
     "vite": "^5.0.0",
     "vercel": "^39.0.0"
   }
-  }
+}
