--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@novu/node": "^2.0.0",
     "formidable": "^3.5.1",
     "@neondatabase/serverless": "^0.10.4",
     "@vercel/blob": "^0.27.0",
