Update vercel.json with cron and rewrite routes

--- a/. vercel.json
+++ b/. vercel.json
@@ -6,11 +6,24 @@
       "NODE_VERSION": "20"
     }
   },
-  "routes": [
+  "crons": [
     {
-      "src": "/api/gemini",
-      "dest": "/api/gemini.js",
-      "methods": ["POST"]
+      "path": "/api/cron-handler",
+      "schedule": "0 9 * * *"
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/api/notifications",
+      "destination": "/api/notifications.js"
+    },
+    {
+      "source": "/api/gemini",
+      "destination": "/api/gemini.js"
+    },
+    {
+      "source": "/api/cron-handler",
+      "destination": "/api/cron-handler.js"
     }
   ]
 }
