--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,15 +1,12 @@
-<manifest xmlns:android="http://schemas.microsoft.com/apk/res/android"
-    package="com.example.raqqa"> <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
         android:label="raqqa"
-        android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher"
-        android:usesCleartextTraffic="true"> <meta-data
+        android:icon="@mipmap/ic_launcher">
+        
+        <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-
+            
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -18,7 +15,6 @@
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
             android:windowSoftInputMode="adjustResize">
-            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
