--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@supabase/supabase-js": "^2.39.3",
     "@vercel/postgres": "^0.9.0",
     "node-fetch": "^3.3.0",
-    "pg": "^8.11.0"
+    "pg": "^8.11.0",
+    "@capacitor/core": "latest",
+    "@capacitor/cli": "latest",
+    "@capacitor/android": "latest"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
