--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "ionic:build": "vite build",
+    "ionic:cap:build": "npx cap copy android"
   },
   "dependencies": {
     "@knocklabs/node": "^0.6.10",
