--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,18 +1,19 @@
-buildscript {
-    ext.kotlin_version = '1.8.22'
-    repositories {
-        google()
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:7.3.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+apply plugin: 'com.android.application'
+
+android {
+    namespace "com.raqqa.app"
+    compileSdk 34
+    defaultConfig {
+        applicationId "com.raqqa.app"
+        minSdk 22
+        targetSdk 34
+        versionCode 1
+        versionName "1.0"
     }
 }
 
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
+repositories {
+    flatDir{
+        dirs 'libs'
     }
 }
